// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SelectWallet renders correctly when custom wallet exists 1`] = `
<View
  style={
    [
      {
        "alignItems": "stretch",
        "flexDirection": "row",
        "gap": 4,
      },
      undefined,
    ]
  }
>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#F56522",
        "borderColor": "#F56522",
        "borderRadius": 8,
        "borderWidth": 1,
        "height": 24,
        "justifyContent": "center",
        "opacity": 1,
        "paddingLeft": 8,
        "paddingRight": 8,
      }
    }
  >
    <Text
      allowFontScaling={false}
      style={
        [
          {
            "color": "#2B1911",
            "fontFamily": "Baloo2-Regular",
            "fontSize": 16,
            "letterSpacing": 0.16,
            "lineHeight": 24,
          },
          [
            {
              "fontFamily": "Baloo2-SemiBold",
              "fontSize": 14,
              "letterSpacing": 0.5,
              "lineHeight": 24,
              "textTransform": "uppercase",
            },
            {
              "color": "#FFFCFA",
            },
          ],
        ]
      }
    >
      Peach wallet
    </Text>
  </View>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignItems": "center",
        "borderColor": "#9F8C82",
        "borderRadius": 8,
        "borderWidth": 1,
        "height": 24,
        "justifyContent": "center",
        "opacity": 1,
        "paddingLeft": 8,
        "paddingRight": 8,
      }
    }
  >
    <Text
      allowFontScaling={false}
      style={
        [
          {
            "color": "#2B1911",
            "fontFamily": "Baloo2-Regular",
            "fontSize": 16,
            "letterSpacing": 0.16,
            "lineHeight": 24,
          },
          [
            {
              "fontFamily": "Baloo2-SemiBold",
              "fontSize": 14,
              "letterSpacing": 0.5,
              "lineHeight": 24,
              "textTransform": "uppercase",
            },
            {
              "color": "#9F8C82",
            },
          ],
        ]
      }
    >
      My custom address
    </Text>
  </View>
</View>
`;

exports[`SelectWallet renders correctly when only peach wallet exists 1`] = `
<View
  style={
    [
      {
        "alignItems": "stretch",
        "flexDirection": "row",
        "gap": 4,
      },
      undefined,
    ]
  }
>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignItems": "center",
        "borderColor": "#2B1911",
        "borderRadius": 8,
        "borderWidth": 1,
        "height": 24,
        "justifyContent": "center",
        "opacity": 1,
        "paddingLeft": 8,
        "paddingRight": 8,
      }
    }
  >
    <Text
      allowFontScaling={false}
      style={
        [
          {
            "color": "#2B1911",
            "fontFamily": "Baloo2-Regular",
            "fontSize": 16,
            "letterSpacing": 0.16,
            "lineHeight": 24,
          },
          {
            "color": "#2B1911",
            "fontFamily": "Baloo2-SemiBold",
            "fontSize": 14,
            "letterSpacing": 0.5,
            "lineHeight": 24,
            "textTransform": "uppercase",
          },
        ]
      }
    >
      Peach wallet
    </Text>
  </View>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignItems": "center",
        "borderColor": "#F56522",
        "borderRadius": 8,
        "borderWidth": 1,
        "height": 24,
        "justifyContent": "center",
        "opacity": 1,
        "paddingLeft": 8,
        "paddingRight": 8,
      }
    }
    testID="goToPayoutAddress"
  >
    <test-file-stub
      fill="#F56522"
      style={
        [
          {
            "height": 24,
            "width": 24,
          },
          {
            "height": 12,
            "width": 12,
          },
        ]
      }
    />
  </View>
</View>
`;
